// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col Align Self renders center self alignment if provided 1`] = `
<div
  className="col align-self-center "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Align Self renders end self alignment if provided 1`] = `
<div
  className="col align-self-end "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Align Self renders start self alignment if provided 1`] = `
<div
  className="col align-self-start "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Justify Content renders around justify content if provided 1`] = `
<div
  className="col justify-content-around "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Justify Content renders between justify content if provided 1`] = `
<div
  className="col justify-content-between "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Justify Content renders center justify content if provided 1`] = `
<div
  className="col justify-content-center "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Justify Content renders end justify content if provided 1`] = `
<div
  className="col justify-content-end "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Justify Content renders start justify content if provided 1`] = `
<div
  className="col justify-content-start "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Offsets renders offsetLg if provided 1`] = `
<div
  className="offset-lg-6 "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Offsets renders offsetMd if provided 1`] = `
<div
  className="offset-md-6 "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Offsets renders offsetSm if provided 1`] = `
<div
  className="offset-sm-6 "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Offsets renders offsetXl if provided 1`] = `
<div
  className="offset-xl-6 "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Offsets renders offsetXs if provided 1`] = `
<div
  className="offset-xs-6 "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Order renders pseudo order if provided 1`] = `
<div
  className="col order-first "
  data-garden-id="grid.col"
  data-garden-version="version"
  order="first"
/>
`;

exports[`Col Order renders string based order if provided 1`] = `
<div
  className="col order-md-12 "
  data-garden-id="grid.col"
  data-garden-version="version"
  order="md-12"
/>
`;

exports[`Col Sizing renders lg if provided 1`] = `
<div
  className="col-lg-6 "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Sizing renders md if provided 1`] = `
<div
  className="col-md-6 "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Sizing renders size if provided 1`] = `
<div
  className="col-4 "
  data-garden-id="grid.col"
  data-garden-version="version"
  size={4}
/>
`;

exports[`Col Sizing renders sm if provided 1`] = `
<div
  className="col-sm "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Sizing renders sm if provided 2`] = `
<div
  className="col-sm-6 "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Sizing renders xl if provided 1`] = `
<div
  className="col-xl-6 "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Sizing renders xs if provided 1`] = `
<div
  className="col-xs-6 "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col renders default styling 1`] = `
<div
  className="col "
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;
